<resources>
    <string name="app_name">ReaderDemo</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="db_Name">KASH MPOS</string>
    <string name="tt_Venta">V</string>
    <string name="tt_Cancelacion">C</string>
    <string name="tt_Devolucion">D</string>
    <string name="title_activity_posregister_datos_usuario">Registro 1/3.</string>
    <string name="title_activity_capture_photo">Capture</string>
    <string name="title_activity_posregister_type_user">Tipo de Usuario.</string>
    <string name="title_activity_posregister_configuration">Registro 2/3.</string>
    <string name="title_activity_posregister_security">Registro 3/3.</string>
    <string name="title_activity_posregister_token_security">Registro Token/Nip</string>
    <string name="title_activity_posregister_ok">Informacion</string>
    <string name="title_activity_poslogin">Ingreso de Usuario</string>
    <string name="title_activity_posmenu">Menú Entura</string>
    <string name="title_activity_possales">Venta</string>
    <string name="title_activity_posread_card">Lectura de Tarjeta</string>
    <string name="title_activity_possales_successful">Confirmaci\u00f3n de Venta</string>
    <string name="title_activity_posinfo">Info. POS</string>
    <string name="title_activity_pos_terminals_Adic">Terminales Adicionales</string>
    <string name="add_terminal_user">Agrega Terminal Adicional</string>
    <string name="list_device">Vincular tu lector</string>
    <string name="title_detail_terminal">Detalle Terminal</string>
    <string name="title_activity_pos_config">Mi POS</string>
    <string name="title_activity_service_pay">Pago de Servicios</string>
    <string name="title_activity_recharge_tae">Tiempo Aire</string>
    <string name="title_activity_postransactions_info">Consulta</string>
    <string name="registerDataComerce">Datos del Comercio 1/4</string>
    <string name="registerDataBank">Datos Bancarios 2/4</string>
    <string name="registerConfiguration">Configuración 3/4</string>
    <string name="registerSecurity">Seguridad 4/4</string>
    <string name="registerTypeUser">Tipo Usuario</string>
    <string name="registerTokenNip">Registro Token/Nip</string>
    <string name="userLocatario">Locatario</string>
    <string name="userAdicional">Adicional</string>
    <string name="numberCountBank">Número Cuenta/Clabe</string>
    <string name="numberCountBankClabe">Adicional</string>
    <string name="nameMerchant">Nombre Comercio</string>
    <string name="registerContacto">Contacto</string>
    <string name="hint_merchant">Comercio</string>
    <string name="hint_number_token">10 digitos</string>
    <string name="hint_number_nip">4 digítos</string>
    <string name="hint_name_user">Nombre</string>
    <string name="hint_last_name">Apellidos</string>
    <string name="hint_addres_home">Calle. N°. Col.</string>
    <string name="hint_number_count_bank">N°Cuenta(14 digítos)</string>
    <string name="hint_number_count_bank_clabe">N°Cuenta(18 digítos)</string>
    <string name="hint_number_count_bank_confirm">Confirmar Cuenta</string>
    <string name="hint_number_count_bank__clabe_confirm">Confirmar Clabe</string>
    <string name="hint_mail_example_azteca">example@entura.com.mx</string>
    <string name="hint_number_digits_telephone">10 digítos</string>
    <string name="EnableCustomer">Activar Comercio</string>
    <string name="AkiiPagoLogo">Logo</string>
    <string name="Amount">MONTO</string>
    <string name="Amount_TAX">Monto IVA</string>
    <string name="Amount_Tip">Monto Propina\u0020\u0020$</string>
    <string name="Amount_single_Tip">Propina\u0020$</string>
    <string name="Amount_Total">Monto Total</string>
    <string name="Amount_singular_Total">Total\u0020\u0020\u0020\u0020\u0020$</string>
    <string name="cancelations">Consultas</string>
    <string name="Congrats">¡Felicidades!</string>
    <string name="CustomerNumber">Número de Comercio</string>
    <string name="affiliationIdLabel">N\u00famero de Afilicaci\u00f3n</string>
    <string name="nombre">Nombre</string>
    <string name="devolutions">Devolver</string>
    <string name="Email">E-mail</string>
    <string name="FeeDummie">$ 0.0000</string>
    <string name="imgMessage">Mensaje</string>
    <string name="imgOK">OK</string>
    <string name="info">Informaci\u00f3n</string>
    <string name="mnu_configuration">Info</string>
    <string name="mnu_services_pay">Servicios</string>
    <string name="leyenda_voucher">"Por este pagar\u00e9 prometo y me obligo incondicionalmente a pagar a la orden de la instituci\u00f3n emisora de la tarjeta correspondiente el importe de la operaci\u00f3n cuyos datos de identificaci\u00f3n se muestran en este documento bajo los t\u00e9rminos y condiciones establecidos en el contrato celebrado con dicha instituci\u00f3n para el uso de la citada tarjeta. Asimismo reconozco, que el presente comprobante de operaci\u00f3n corresponde a los datos e importes indicados en el mismo, teniendo pleno valor probatorio y fuerza legal en virtud de que dicha operaci\u00f3n fue firmada a nombre propio de forma aut\u00f3grafa o electr\u00f3nica siendo el suscrito el \u00fanico responsable, estando conforme con el cargo realizado en este momento a mi tarjeta. El presente documento es negociable solo con instituciones de Cr\u00e9dito"</string>
    <string name="merchantFee">Comisi\u00f3n a pagar 3.5%</string>
    <string name="myAccount">Mi Cuenta</string>
    <string name="Other">Otro</string>
    <string name="Password">Contrase\u00f1a</string>
    <string name="labelWelcome">Bienvenido, ingresa tu número NIP</string>
    <string name="numeroNip">NIP</string>
    <string name="PasswordConfirm">Confirmar Contrase\u00f1a</string>
    <string name="Percent_fifteen">15%</string>
    <string name="Percent_ten">10%</string>
    <string name="Percent_twenty">20%</string>
    <string name="qrys">"Consulta"</string>
    <string name="registerPOSOK">Has activado correctamente</string>
    <string name="registerPOSOK2">Entura</string>
    <string name="sales">Venta</string>
    <string name="SignIn">Ingresar</string>
    <string name="exitApp">SALIR</string>
    <string name="TAX">IVA</string>
    <string name="Tip">Propina</string>
    <string name="User">Usuario</string>
    <string name="UserDummie">Bienvenido</string>
    <string name="lb_vincular_device">Vincular lector</string>
    <string name="UserName">Nombre de Usuario</string>
    <string name="LoginInfo">\n\nUn Servicio de Red Global Entura</string>
    <string name="LoginInfoCallCenter">Centro de Atención Telefónica\n01-800-ENTURED(368-87-33)\ncontacto@entura.com.mx</string>
    <string name="LoginInfoCallCenter1">Centro de Atención Telefónica Conm(55)41240063</string>
    <string name="LoginInfoCallCenter2"> Movil/Watsp 55-43890865 \n  agregadores@credencialprocessing.com</string>
    <string name="CurrencySign">$</string>
    <string name="confirma_clave_nip">Confirma Clave NIP</string>
    <string name="clave_nip">Clave NIP</string>
    <string name="last_name">Apellido</string>
    <string name="token_security">Token</string>
    <string name="label_help">Ayuda Entura Mpos</string>
    <string name="label_type_identification_photo">Tipo de Identificación:</string>
    <string name="label_type_address_photo">Comp. de Domicilio:</string>
    <string name="label_telephone">Telefono</string>
    <string name="label_type_device">Dispositivo :</string>
    <string name="label_type_merchant"> Comercio         :</string>
    <string name="idTerminalLabel">ID. Terminal:</string>
    <string name="aliasTerminalLabel">Alias de la Terminal:</string>
    <string name="nombreTerminalLabel">Nombre de la Terminal:</string>
    <string name="limiteMaximoLabel">L\u00edmite M\u00e1ximo por Transacci\u00f3n:</string>
    <string name="limiteMinimoLabel">L\u00edmite M\u00ednimo por Transacci\u00f3n:</string>
    <string name="maximoTxPorDiaLabel">M\u00e1x. de Transacciones por D\u00eda:</string>
    <string name="maximoTxPorMesLabel">M\u00e1x. de Transacciones por Mes:</string>
    <string name="areaOperacionLabel">\u00c1rea de Operaci\u00f3n:</string>
    <string name="rfcLabel">RFC:</string>
    <string name="direccionLabel">Direcci\u00f3n:</string>
    <string name="direccionLabelRegister">Domicilio</string>
    <string name="err_EmptyValuesReg">Debe capturar todos los valores para el registro de la terminal!</string>
    <string name="err_EmptyDatosComercio">Debe capturar Nombre Comercio,Nombre,Apellidos y Dirección!</string>
    <string name="err_EmptyDatosComercioBank">Debe capturar Cuenta, Clabe, Telefono y Mail!</string>
    <string name="err_InvalidMail">E-Mail invalido, verifique!</string>
    <string name="err_EmptyCapturePhoto">Debe capturar fotografia Identificación/Dirección!</string>
    <string name="err_EmptyDatosTerminalUsers">Debe capturar Nombre, Apellidos y Nip!</string>
    <string name="err_EmptyDatosComercioLengthN">La longitud N°Guardadito debe de ser de 20, verifique!</string>
    <string name="err_EmptyDatosComercioBankCuenta">La longitud N°Cuenta debe de ser de 14, verifique!</string>
    <string name="err_EmptyDatosComercioBankCuentaClabe">La longitud N°Clabe debe de ser de 18, verifique!</string>
    <string name="err_EmptyDatosComercioBankTelephone">La longitud N°Telefonico debe de ser de 10, verifique!</string>
    <string name="err_EmptySecurity">Debe capturar número Nip!</string>
    <string name="err_EmptySecurityConfirmNip">Confirme Nip!</string>
    <string name="err_EmptySecurityNipLength">Logitud de Nip incorrecto, verifique!</string>
    <string name="err_EmptyTokenLength">Logitud de Token incorrecto, verifique!</string>
    <string name="err_EmptyValuesLogin">Debe capturar todos los valores para ingresar al sistema!</string>
    <string name="err_PasswordReg">No coincide la contrase\u00f1a y la confirmaci\u00f3n. verifique!</string>
    <string name="err_Nguardadito">No coincide la cuenta Guardadito. verifique!</string>
    <string name="err_N_countBank">No coincide N°Cuenta. verifique!</string>
    <string name="err_N_countBankClabe">No coincide N°Clabe. verifique!</string>
    <string name="err_N_nip">No coincide NIP. verifique!</string>
    <string name="err_UpdStatusApp">Error al actualizar el estatus de la aplicaci\u00f3n!</string>
    <string name="err_RegisterPOS">Error al realizar el registro de la terminal.\n\n</string>
    <string name="err_AddMenuOptions">Error al almacenar las opciones de men\u00fa para el usuario</string>
    <string name="err_UpdMenuOptions">Error al actualizar las opciones de men\u00fa para el usuario</string>
    <string name="err_Connection">No se encuentra una conexi\u00f3n activa, verifique!</string>
    <string name="err_NoMenuOptions">No hay opciones de menu disponibles!</string>
    <string name="err_NoTransactions">No hay transacciones registradas para esta terminal!</string>
    <string name="err_NoTransactionsCancel">No hay transacciones que puedan ser canceladas!</string>
    <string name="err_NoTransactionsReturn">No hay transacciones que puedan ser devueltas!</string>
    <string name="err_ReadingAttemps">Se ha superado el n\u00famero de intentos de lectura!</string>
    <string name="err_System">Error del sistema: </string>
    <string name="err_NoSwipedCard">Error del sistema: No se ha deslizado una tarjeta. Reintente</string>
    <string name="err_CardNumberEmpty">Debe ingresar el número de tarjeta</string>
    <string name="zero_decimal">0.00</string>
    <string name="singLegend">Firma del cliente</string>
    <string name="cardLegend2">N° de Tarjeta</string>
    <string name="CleanSign">BORRAR</string>
    <string name="CardValueDummie">493173******0007</string>
    <string name="confirmar">CONFIRMAR</string>
</resources>